[tool.poetry]
name = "laminar"
version = "0.1.0"
description = ""
authors = ["Alpha <piotr@piotryordanov.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
urllib3 = "^1.26.12"
pandas = "^1.5.0"
requests = "^2.28.1"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
